fix(app): Enforced content type and enum value, remove error message after success from index.html
